<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:background="@color/colorBackground2"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/sign_up"
        android:textSize="24sp"
        android:textColor="@color/colorPrimaryText"
        android:fontFamily="@font/poppins_semi_bold"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:paddingTop="2dp"
        android:text="@string/sign_up_information"
        android:textColor="@color/colorText3"
        app:layout_constraintTop_toBottomOf="@+id/textSignUp"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textFullName"
        android:paddingTop="50dp"
        android:text="@string/textFullName"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@+id/textInformation"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputTextFullName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/textHintFullName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorText3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textFullName"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textUsername"
        android:paddingTop="20dp"
        android:text="@string/textUsername"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@+id/inputTextFullName"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/inputTextUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_username"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/textHintUsername"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorText3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textUsername"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textEmailAddress"
        android:paddingTop="20dp"
        android:text="@string/textEmailAddress"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@+id/inputTextUsername"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/textHintEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorText3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textEmailAddress"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textPassword"
        android:paddingTop="20dp"
        android:text="@string/textPassword"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="12dp"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/textHintPassword"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorText3"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        tools:ignore="MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:paddingTop="30dp"
        android:text="@string/textButtonSignUp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        tools:ignore="MissingConstraints,TextContrastCheck,DuplicateSpeakableTextCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>